--- a/project2_1/app/views/users/registrations/new.html.erb
+++ b/project2_1/app/views/users/registrations/new.html.erb
@@ -4,6 +4,11 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
+    <div class="field">
+      <%= f.label :name %><br />
+      <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
+    </div>
+
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
@@ -21,6 +26,17 @@
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
+
+    <div class="field">
+      <%= f.label :role %>
+      <%= f.select :role, options_for_select(%w[customer agent]) %>
+    </div>
+
+    <p>
+      <strong>    </strong>
+      <strong>    </strong>
+
+    </p>
 
   <div class="actions">
     <%= f.submit "Sign up" %>
