--- a/project2_1/app/views/tours/index.html.erb
+++ b/project2_1/app/views/tours/index.html.erb
@@ -21,10 +21,12 @@
       <tr>
         <td><%= tour.name %></td>
         <td><%= tour.description %></td>
-        <td><%= tour.user.email %></td>
+        <td><%= tour.user.name %></td>
         <td><%= link_to 'Show', tour %></td>
+        <%if (current_user) && ( current_user.role.match?(/admin|agent/) )  %>
         <td><%= link_to 'Edit', edit_tour_path(tour) %></td>
         <td><%= link_to 'Destroy', tour, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
