--- a/project2_1/app/views/tours/_form.html.erb
+++ b/project2_1/app/views/tours/_form.html.erb
@@ -15,12 +15,19 @@
 
   <div class="field">
     <p><%= form.label :name %></p>
-    <p><%= form.text_field :name %></p>
+    <p><%= form.text_field :name,required: true %></p>
   </div>
 
   <div class="field">
     <p><%= form.label :description %></p>
     <p><%= form.text_area :description %></p>
+  </div>
+
+  <div class="field">
+    <p><%= form.label :total_seat %></p>
+    <p><%= form.number_field :total_seat,required: true %></p>
+<!--    <p><%# form.label :aval_seat %></p>-->
+    <p><% form.hidden_field :aval_seat, value: tour.total_seat %></p>
   </div>
 
   <div class="actions">
