Fix photo feature

--- a/project2_1/app/views/books/_book.html.erb
+++ b/project2_1/app/views/books/_book.html.erb
@@ -12,15 +12,23 @@
 
   <% @books.each do |b| %>
 
-    <tr>
-      <td><%= b.book_seat %></td>
 
-      <td><%= b.user.email %></td>
-      <td><%= link_to "edit", edit_tour_book_path(b.tour_id, b.id) %></td>
+    <% if b.user_id == current_user.id %>
 
-      <td><%= link_to 'Destroy', tour_book_path(b.tour_id, b.id), method: :delete, data: {confirm: 'Are you sure?'} %></td>
-    </tr>
 
+
+      <tr>
+        <td><%= b.book_seat %></td>
+
+        <td><%= b.user.email %></td>
+        <td><%= link_to "edit", edit_tour_book_path(b.tour_id, b.id) %></td>
+
+        <td><%= link_to 'Destroy', tour_book_path(b.tour_id, b.id), method: :delete, data: {confirm: 'Are you sure?'} %></td>
+      </tr>
+
+
+
+    <% end %>
     <!--    <p><%#= link_to "edit", edit_tour_review_path(r.tour_id,r.id) %>-->
     <!--    <%#= link_to "delete", tour_review_path(r.tour_id,r.id), method: :delete, data: { confirm: 'Are you sure?' } %></p>-->
 
