--- a/project2_1/app/views/reviews/_review.html.erb
+++ b/project2_1/app/views/reviews/_review.html.erb
@@ -1,13 +1,26 @@
-<% @reviews.each do |r| %>
+<table class="table">
 
-  <div class="field">
-    <p><%= r.subject %></p>
-    <p><%= r.message %></p>
-    <p><%= r.user.email %></p>
-    <p><%= link_to "edit", edit_tour_review_path(r.tour_id,r.id) %>
-    <%= link_to "delete", tour_review_path(r.tour_id,r.id), method: :delete, data: { confirm: 'Are you sure?' } %></p>
-  </div>
+  <thead>
+  <tr>
+    <th>Reviews</th>
+
+  </tr>
+  </thead>
+
+  <tbody>
+
+  <% @reviews.each do |r| %>
+
+    <div class="field">
+      <p><%= r.subject %></p>
+      <p><%= r.message %></p>
+      <p><%= r.user.email %></p>
+      <p><%= link_to "edit", edit_tour_review_path(r.tour_id, r.id) %>
+        <%= link_to "delete", tour_review_path(r.tour_id, r.id), method: :delete, data: {confirm: 'Are you sure?'} %></p>
+    </div>
 
 
+  <% end %>
+  </tbody>
 
-<% end %>
+</table>
