--- a/project2_1/app/views/photos/_form.html.erb
+++ b/project2_1/app/views/photos/_form.html.erb
@@ -1,17 +1,18 @@
 
-<%= form_for ([@tour, @photo]) do |form| %>
+<%= form_for ([@tour,@photo]) do |f| %>
 
   <div class="field">
 
-    <p><%= form.label :image %></p>
-    <p><%= form.file_field :image %></p>
+    <p><%= f.label :image %></p>
+    <p><%= f.file_field :image %></p>
 
-    <% form.hidden_field :user_id, value: current_user.id %>
+
   </div>
 
+  <% form.hidden_field :user_id, value: current_user.id %>
 
   <div class="actions">
-  <p><%= form.submit"add a image" %></p>
+  <p><%= form.submit "add a image"%></p>
   </div>
 
 
