--- a/project2_1/app/views/tours/index.html.erb
+++ b/project2_1/app/views/tours/index.html.erb
@@ -23,7 +23,7 @@
         <td><%= tour.description %></td>
         <td><%= tour.user.name %></td>
         <td><%= link_to 'Show', tour %></td>
-        <%if (current_user) && ( current_user.role.match?(/admin|agent/) )  %>
+        <%if (current_user) && ( current_user.role.match(/admin|agent/) )  %>
         <td><%= link_to 'Edit', edit_tour_path(tour) %></td>
         <td><%= link_to 'Destroy', tour, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <% end %>
