--- a/project2_1/app/views/tours/show.html.erb
+++ b/project2_1/app/views/tours/show.html.erb
@@ -35,6 +35,31 @@
 
   </p>
 
+<p>
+  <strong>Price:</strong>
+  <%= @tour.price %>
+</p>
+
+<p>
+  <strong>Booking Deadline:</strong>
+  <%= @tour.booking_deadline %>
+</p>
+
+<p>
+  <strong>Duration:</strong>
+  <%= @tour.start_date %>~<%= @tour.end_date %>
+</p>
+
+<p>
+  <strong>Start Location:</strong>
+  <%= @tour.start_location %>
+</p>
+
+<p>
+  <strong>Contact:</strong>
+  <%= @tour.contact_info %>
+</p>
+
 <!--<p>-->
 <!--  <strong>Available Seats:</strong>-->
   <%#= @tour.description %>
