--- a/project2_1/app/views/tours/index.html.erb
+++ b/project2_1/app/views/tours/index.html.erb
@@ -12,6 +12,12 @@
       <th>Name</th>
       <th>Description</th>
       <th>Creator</th>
+      <th>Price</th>
+      <th>Booking_deadline</th>
+      <th>Duration</th>
+      <th>Start_location</th>
+      <th>Seats(avl/total)</th>
+      <th>Contact</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -22,6 +28,12 @@
         <td><%= tour.name %></td>
         <td><%= tour.description %></td>
         <td><%= tour.user.name %></td>
+        <td><%= tour.price %></td>
+        <td><%= tour.booking_deadline %></td>
+        <td><%= tour.start_date %>~<%= tour.end_date %></td>
+        <td><%= tour.start_location %></td>
+        <td><%= tour.aval_seat %>/<%= tour.total_seat %></td>
+        <td><%= tour.contact_info %></td>
         <td><%= link_to 'Show', tour %></td>
         <%if (current_user) && ( current_user.role.match(/admin|agent/) )  %>
         <td><%= link_to 'Edit', edit_tour_path(tour) %></td>
