--- a/project2_1/app/views/tours/show.html.erb
+++ b/project2_1/app/views/tours/show.html.erb
@@ -46,13 +46,12 @@
   </p>
 
 
-
   <p><%= render 'books/form'%></p>
   <p><%= render 'books/book' %></p>
 
   <p><%= render 'waitlists/waitlist' %></p>
 
-  <p><%= render 'reviews/form' %></p>
+  <p><%= render 'reviews/form',  tour: @tour%></p>
   <p><%= render 'reviews/review' %></p>
 
 
