--- a/project2_1/app/views/home/bookmarklistboard.html.erb
+++ b/project2_1/app/views/home/bookmarklistboard.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <p id="notice"><%= notice %></p>
 
-  <h1>Welcome Page</h1>
+  <h1>Bookmark List Page</h1>
 
 
   <!--      <ul class="nav navbar-nav pull-right">-->
@@ -17,7 +17,10 @@
   <!--      </ul>-->
 
 
-  <p><%= link_to 'check the tour', tours_path %></p>
-
+<!--  <p><%#= link_to 'check the tour', tours_path %></p>-->
+<!--  <p><%#= link_to 'check the wait list', home_waitlistboard_path%></p>-->
+<!--  <p><%#= link_to 'check the booking list', home_booklistboard_path%></p>-->
+<!--  <p><%#= link_to 'check the bookmark list', home_bookmarklistboard_path%></p>-->
 <%#= link_to 'Dash Board', tours_dashboard_path %>
+  <p><%= link_to 'Back', root_path %></p>
 </div>
