--- a/project2_1/app/views/reviews/_form.html.erb
+++ b/project2_1/app/views/reviews/_form.html.erb
@@ -1,3 +1,5 @@
+
+
 <% @books.each do |b| %>
 
   <% if b.user_id == current_user.id %>
@@ -10,12 +12,9 @@
         <!--    required true is the html5 client check if field is empty or not-->
         <p><%= form.text_field :subject, required: true %></p>
         <p><%= form.label :message %></p>
-        <!--    required true is the html5 client check if field is empty or not-->
         <p><%= form.text_field :message, required: true %></p>
-        <p>
-          <% form.hidden_field :user_id, value: current_user.id %></p>
+        <p><% form.hidden_field :user_id, value: current_user.id %></p>
       </div>
-
 
       <div class="actions">
         <p><%= form.submit "add a review" %></p>
@@ -23,6 +22,8 @@
 
 
     <% end %>
+
+    <% break %>
 
   <% end %>
 
