--- a/project2_1/app/views/reviews/_review.html.erb
+++ b/project2_1/app/views/reviews/_review.html.erb
@@ -1,26 +1,16 @@
-<table class="table">
+<h3>Reviews</h3>
 
-  <thead>
-  <tr>
-    <th>Reviews</th>
+<% @reviews.each do |r| %>
 
-  </tr>
-  </thead>
-
-  <tbody>
-
-  <% @reviews.each do |r| %>
-
-    <div class="field">
-      <p><%= r.subject %></p>
-      <p><%= r.message %></p>
-      <p><%= r.user.email %></p>
-      <p><%= link_to "edit", edit_tour_review_path(r.tour_id, r.id) %>
-        <%= link_to "delete", tour_review_path(r.tour_id, r.id), method: :delete, data: {confirm: 'Are you sure?'} %></p>
-    </div>
+  <div class="field">
+    <p><%= r.subject %></p>
+    <p><%= r.message %></p>
+    <p><%= r.user.name %></p>
+    <p><%= link_to "edit", edit_tour_review_path(r.tour_id, r.id) %>
+      <%= link_to "delete", tour_review_path(r.tour_id, r.id), method: :delete, data: {confirm: 'Are you sure?'} %></p>
+  </div>
 
 
-  <% end %>
-  </tbody>
+<% end %>
 
-</table>
+
