--- a/project2_1/app/views/waitlists/_waitlist.html.erb
+++ b/project2_1/app/views/waitlists/_waitlist.html.erb
@@ -1,4 +1,3 @@
-
 <table class="table">
 
   <thead>
@@ -10,30 +9,19 @@
   </thead>
 
   <tbody>
-<% @waitlists.each do |w| %>
+  <% @waitlists.each do |w| %>
 
-
-
-  <% if (w.user_id == current_user.id) ||( current_user.role.match(/admin/))%>
-
-
-
+    <% if (w.user_id == current_user.id) || (current_user.role.match(/admin/)) %>
 
       <tr>
         <td><%= w.wait_seat %></td>
-        <!--    <p><%#= b.aval_seat %></p>-->
-        <td><%= w.user.email %></td>
+        <td><%= w.user.name %></td>
         <td><%= link_to 'Destroy', tour_waitlist_path(w.tour_id, w.id), method: :delete, data: {confirm: 'Are you sure?'} %></td>
       </tr>
 
+    <% end %>
+
   <% end %>
-  <!--    <p><%#= link_to "edit", edit_tour_review_path(r.tour_id,r.id) %>-->
-  <!--    <%#= link_to "delete", tour_review_path(r.tour_id,r.id), method: :delete, data: { confirm: 'Are you sure?' } %></p>-->
-
-
-
-
-<% end %>
   </tbody>
 
 </table>
