add bookmark feature

--- a/project2_1/app/views/books/_form.html.erb
+++ b/project2_1/app/views/books/_form.html.erb
@@ -17,8 +17,7 @@
     <!--    required true is the html5 client check if field is empty or not-->
     <p><%= form.number_field :book_seat, required: true %></p>
 
-    <p>
-      <% form.hidden_field :user_id, value: current_user.id %></p>
+    <p><% form.hidden_field :user_id, value: current_user.id %></p>
 
   </div>
 
