--- a/project2_1/app/views/home/index.html.erb
+++ b/project2_1/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <p id="notice"><%= notice %></p>
 
-  <h1>Welcome Page</h1>
+  <h1>Welcome</h1>
 
 
   <!--      <ul class="nav navbar-nav pull-right">-->
@@ -17,7 +17,7 @@
   <!--      </ul>-->
 
 
-  <p><%= link_to 'check the tour', tours_path %></p>
+<!--  <p><%#= link_to 'check the tour', tours_path %></p>-->
 
 <%#= link_to 'Dash Board', tours_dashboard_path %>
 </div>
