--- a/project2_1/app/views/tours/_form.html.erb
+++ b/project2_1/app/views/tours/_form.html.erb
@@ -32,7 +32,7 @@
 
   <div class="field">
     <p><%= form.label :price %></p>
-    <p><%= form.text_field :price %></p>
+    <p><%= form.number_field :price, required: true, step: :any %></p>
   </div>
 
   <div class="field">
@@ -52,12 +52,12 @@
 
   <div class="field">
     <p><%= form.label :start_location %></p>
-    <p><%= form.text_field :start_location %></p>
+    <p><%= form.text_field :start_location, required: true %></p>
   </div>
 
   <div class="field">
     <p><%= form.label :contact_information %></p>
-    <p><%= form.text_field :contact_info %></p>
+    <p><%= form.text_field :contact_info, required: true %></p>
   </div>
 
   <div class="actions">
