--- a/project2_1/app/views/layouts/_navigation.html.erb
+++ b/project2_1/app/views/layouts/_navigation.html.erb
@@ -9,15 +9,17 @@
         <span class="icon-bar"></span>
       </button>
       <%= link_to 'Home', root_path, class: 'navbar-brand' %>
+      <%= link_to 'Tour List', tours_path, class: 'navbar-brand'%>
       <%= link_to 'Wait List', home_waitlistboard_path, class: 'navbar-brand'%>
       <%= link_to 'Booking List', home_booklistboard_path, class: 'navbar-brand'%>
       <%= link_to 'Bookmark List', home_bookmarklistboard_path, class: 'navbar-brand'%>
+
 
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <%= render 'layouts/navigation_links' %>
-        <%= render 'layouts/nav_links_for_auth' %>
+        <%#= render 'layouts/nav_links_for_auth' %>
       </ul>
     </div>
   </div>
