--- a/project2_1/app/views/layouts/application.html.erb
+++ b/project2_1/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Project21</title>
+    <title>Project2</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -22,10 +22,11 @@
     <% if user_signed_in? %>
       Logged in as <strong><%= current_user.email %></strong>.
             <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
-      <%#= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+      <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
     <% else %>
-<!--      <%#= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |-->
-      <%#= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
+     You are not sign in
+      <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
+      <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
     <% end %>
   </p >
 
