--- a/project2_1/app/views/reviews/_form.html.erb
+++ b/project2_1/app/views/reviews/_form.html.erb
@@ -8,7 +8,7 @@
     <%= form_for ([@tour, @review]) do |form| %>
 
       <div class="field">
-        <p>Add your review here:</p>
+        <p><h4>Add your review Below:</h4></p>
         <p><%= form.label :subject %></p>
         <!--    required true is the html5 client check if field is empty or not-->
         <p><%= form.text_field :subject, required: true %></p>
