optimize the code

--- a/project2_1/app/views/home/index.html.erb
+++ b/project2_1/app/views/home/index.html.erb
@@ -4,18 +4,8 @@
 
   <h1>Welcome</h1>
 
-
-  <!--      <ul class="nav navbar-nav pull-right">-->
-  <!--        <ul class="nav navbar-nav pull-right">-->
-  <%# if user_signed_in? %>
-  <!--            <li><%#= current_user.email %></li>-->
-  <!--            <li><%#= link_to 'Log out', destroy_user_session_path, method: :delete %></li>-->
-  <%# else %>
-  <!--            <li><%#= link_to 'Log In', new_user_session_path %></li>-->
-  <!--            <li><%#= link_to 'Sign Up', new_user_registration_path %></li>-->
-  <%# end %>
-  <!--        </ul>-->
-  <!--      </ul>-->
+  <p>admin account : god@admin.com</p>
+  <p>password: password</p>
 
 
 <!--  <p><%#= link_to 'check the tour', tours_path %></p>-->
