--- a/project2_1/app/views/layouts/_navigation.html.erb
+++ b/project2_1/app/views/layouts/_navigation.html.erb
@@ -10,10 +10,14 @@
       </button>
       <%= link_to 'Home', root_path, class: 'navbar-brand' %>
       <%= link_to 'Tour List', tours_path, class: 'navbar-brand'%>
+        <%if (current_user) && ( current_user.role.match(/admin|customer/) )  %>
       <%= link_to 'Wait List', home_waitlistboard_path, class: 'navbar-brand'%>
       <%= link_to 'Booking List', home_booklistboard_path, class: 'navbar-brand'%>
       <%= link_to 'Bookmark List', home_bookmarklistboard_path, class: 'navbar-brand'%>
-
+        <%end %>
+        <%if (current_user) && ( current_user.role.match(/admin/) )  %>
+      <%= link_to 'Admin Page', admin_users_path, class: 'navbar-brand'%>
+        <%end %>>
 
     </div>
     <div class="collapse navbar-collapse">
