hot fix for he no method error is not log in

--- a/project2_1/app/views/home/booklistboard.html.erb
+++ b/project2_1/app/views/home/booklistboard.html.erb
@@ -8,8 +8,8 @@
     <thead>
     <tr>
       <th>Tour Name</th>
-      <th>Booked seats</th>
-      <th>User Info</th>
+      <th>Booked Seats</th>
+      <th>Booked By</th>
       <th>Update Time</th>
 <!--      <th colspan="2"></th>-->
     </tr>
