--- a/project2_1/app/views/reviews/_review.html.erb
+++ b/project2_1/app/views/reviews/_review.html.erb
@@ -5,7 +5,7 @@
   <div class="field">
     <p><%= r.subject %></p>
     <p><%= r.message %></p>
-    <p><%= r.user.name %></p>
+    <p> Created by:  <%= r.user.name %></p>
     <p><%= link_to "edit", edit_tour_review_path(r.tour_id, r.id) %>
       <%= link_to "delete", tour_review_path(r.tour_id, r.id), method: :delete, data: {confirm: 'Are you sure?'} %></p>
   </div>
