--- a/project2_1/app/views/home/bookmarklistboard.html.erb
+++ b/project2_1/app/views/home/bookmarklistboard.html.erb
@@ -8,7 +8,7 @@
     <thead>
     <tr>
       <th>Tour Name</th>
-      <th>User Info</th>
+      <th>Bookmarked By</th>
       <th>Update Time</th>
       <!--      <th colspan="2"></th>-->
     </tr>
