--- a/project2_1/app/views/home/waitlistboard.html.erb
+++ b/project2_1/app/views/home/waitlistboard.html.erb
@@ -8,7 +8,7 @@
     <thead>
     <tr>
       <th>Waited seats</th>
-      <th>User Info</th>
+      <th>Created By</th>
       <th>Update Time</th>
 <!--      <th colspan="2"></th>-->
     </tr>
