--- a/project2_1/app/views/tours/index.html.erb
+++ b/project2_1/app/views/tours/index.html.erb
@@ -54,8 +54,9 @@
 </p>
 
 <br>
-
-<p><%= link_to 'Create a new tour', new_tour_path %></p>
+  <% if user_signed_in? %>
+      <p><%= link_to 'Create a new tour', new_tour_path %></p>
+    <% end %>
 <%#= link_to 'Back to Welcome Page', root_path %>
 <%#= link_to 'Dash Board', tours_dashboard_path %>
 </div>
