make role regex case insensetive

--- a/project2_1/app/views/home/bookmarklistboard.html.erb
+++ b/project2_1/app/views/home/bookmarklistboard.html.erb
@@ -23,7 +23,7 @@
       <% @bookmarks.each do |bookmark| %>
 
 
-        <% if (bookmark.user_id == current_user.id) || (current_user.role.match(/admin/)) %>
+        <% if (bookmark.user_id == current_user.id) || (current_user.role.match(/admin/i)) %>
 
 
           <tr>
