--- a/project2_1/app/views/tours/index.html.erb
+++ b/project2_1/app/views/tours/index.html.erb
@@ -42,7 +42,7 @@
         <td><%= tour.aval_seat %>/<%= tour.total_seat %></td>
         <td><%= tour.contact_info %></td>
         <td><%= link_to 'Show', tour %></td>
-        <%if (current_user) && ( current_user.role.match(/admin|agent/) )  %>
+        <%if (current_user) && ( current_user.role.match(/admin|agent/i) )  %>
         <td><%= link_to 'Edit', edit_tour_path(tour) %></td>
         <td><%= link_to 'Destroy', tour, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <% end %>
