--- a/project2_1/app/views/home/booklistboard.html.erb
+++ b/project2_1/app/views/home/booklistboard.html.erb
@@ -24,7 +24,7 @@
       <% @books.each do |b| %>
 
 
-        <% if (b.user_id == current_user.id) || (current_user.role.match(/admin/)) %>
+        <% if (b.user_id == current_user.id) || (current_user.role.match(/admin/i)) %>
 
           <tr>
             <th><%= t.name %></th>
