--- a/project2_1/app/views/home/waitlistboard.html.erb
+++ b/project2_1/app/views/home/waitlistboard.html.erb
@@ -23,7 +23,7 @@
       <% @waitlists.each do |w| %>
 
 
-        <% if (w.user_id == current_user.id) || (current_user.role.match(/admin/)) %>
+        <% if (w.user_id == current_user.id) || (current_user.role.match(/admin/i)) %>
 
 
           <tr>
