--- a/project2_1/app/views/photos/index.html.erb
+++ b/project2_1/app/views/photos/index.html.erb
@@ -3,7 +3,7 @@
 
   <h1>Photos</h1>
 
-  <% if (@tour.user_id == current_user.id) && (current_user.role.match(/admin|agent/)) %>
+  <% if (@tour.user_id == current_user.id) && (current_user.role.match(/admin|agent/i)) %>
     <p><%= link_to 'Add a photo', new_tour_photo_path %></p>
   <% end %>
   <p><%= link_to 'Back to tour', tour_path(@tour) %></p>
