fix list location

--- a/project2_1/app/views/home/agenttourlist.html.erb
+++ b/project2_1/app/views/home/agenttourlist.html.erb
@@ -1,16 +1,16 @@
 <div class="container">
   <p id="notice"><%= notice %></p>
 
-  <h1>Book Table</h1>
+  <h1>Booking List of My Tour</h1>
   <table class="table">
 
     <thead>
     <tr>
-      <th>List By</th>
+      <th>Tour List By</th>
       <th>Tour Name</th>
-      <th>Booked Seats</th>
+      <th># of Booked Seats</th>
       <th>Booked By</th>
-      <th>Update Time</th>
+      <th>Last Update Time</th>
     </tr>
     </thead>
 
@@ -37,15 +37,15 @@
   </table>
 
 
-  <h1>Bookmark Table</h1>
+  <h1>Bookmark List of My Tour</h1>
   <table class="table">
 
     <thead>
     <tr>
-      <th>List By</th>
+      <th>Tour List By</th>
       <th>Tour Name</th>
       <th>Bookmarked By</th>
-      <th>Update Time</th>
+      <th>Last Update Time</th>
     </tr>
     </thead>
 
