--- a/project2_1/app/views/layouts/_navigation.html.erb
+++ b/project2_1/app/views/layouts/_navigation.html.erb
@@ -9,17 +9,17 @@
         <span class="icon-bar"></span>
       </button>
       <%= link_to 'Home', root_path, class: 'navbar-brand' %>
-      <%= link_to 'All Tour List', tours_path, class: 'navbar-brand'%>
-      <%= link_to 'My Tour List', home_agenttourlist_path, class: 'navbar-brand'%>
-        <%if (current_user) && ( current_user.role.match(/admin|customer/i) )  %>
-      <%= link_to 'Wait List', home_waitlistboard_path, class: 'navbar-brand'%>
-      <%= link_to 'Booking List', home_booklistboard_path, class: 'navbar-brand'%>
-      <%= link_to 'Bookmark List', home_bookmarklistboard_path, class: 'navbar-brand'%>
-        <%= link_to 'My Tour List', home_agenttourlist_path, class: 'navbar-brand'%>
-        <%end %>
-        <%if (current_user) && ( current_user.role.match(/admin/i) )  %>
-      <%= link_to 'Admin Dashboard', admin_users_path, class: 'navbar-brand'%>
-        <%end %>>
+      <%= link_to 'All Tour List', tours_path, class: 'navbar-brand' %>
+
+      <% if (current_user) && (current_user.role.match(/admin|customer/i)) %>
+        <%= link_to 'Wait List', home_waitlistboard_path, class: 'navbar-brand' %>
+        <%= link_to 'Booking List', home_booklistboard_path, class: 'navbar-brand' %>
+        <%= link_to 'Bookmark List', home_bookmarklistboard_path, class: 'navbar-brand' %>
+        <%= link_to 'My Tour', home_agenttourlist_path, class: 'navbar-brand' %>
+      <% end %>
+      <% if (current_user) && (current_user.role.match(/admin/i)) %>
+        <%= link_to 'Admin Dashboard', admin_users_path, class: 'navbar-brand' %>
+      <% end %>>
 
     </div>
     <div class="collapse navbar-collapse">
