ReadMe and user dashboard
Add ReadMe without test part
Create agent center and customer center.
Agent and Customer now can have a clear information center

--- a/project2_1/app/views/books/_form.html.erb
+++ b/project2_1/app/views/books/_form.html.erb
@@ -23,7 +23,8 @@
 
   <div class="field">
     <p><%= form.label :choice %></p>
-    <p><%= form.select :choice, options_for_select(%w[nothing wait continue cancel]) %></p>
+    <p><%= form.select :choice, options_for_select([['nothing: Book the seats'], ['wait: Add customer to waitlist along with requested seats'],
+                                                    ['continue: Book the seats available; and add remaining seats to waitlist'], ['cancel: Cancel transaction']]) %></p>
   </div>
 
 
