--- a/project2_1/app/views/home/agenttourlist.html.erb
+++ b/project2_1/app/views/home/agenttourlist.html.erb
@@ -1,12 +1,69 @@
 <div class="container">
   <p id="notice"><%= notice %></p>
 
-  <h1>Booking List of My Tour</h1>
+<!--  <h1>My Tours</h1>-->
+  <% if(current_user.role.match(/admin/i)) %>
+    <h1>All Tours</h1>
+  <%else %>
+    <h1>My Tours</h1>
+  <%end%>
+
+
   <table class="table">
 
     <thead>
     <tr>
-      <th>Tour List By</th>
+      <th>List By</th>
+      <th>Tour Name</th>
+      <th>Price</th>
+      <th>Book_Deadline</th>
+      <th>Duration</th>
+      <th>Start_location</th>
+      <th>Seats(avl/total)</th>
+      <th>Contact</th>
+      <th colspan="3"></th>
+    </tr>
+    </thead>
+
+    <tbody>
+
+    <% @tours.each do |t| %>
+      <% if (t.user_id == current_user.id) || (current_user.role.match(/admin/i)) %>
+
+          <tr>
+            <td><%= t.user.name %></td>
+            <td><%= t.name %></td>
+            <td><%= t.price %></td>
+            <td><%= t.booking_deadline %></td>
+            <td><%= t.start_date %>~<%= t.end_date %></td>
+            <td><%= t.start_location %></td>
+            <td><%= t.aval_seat %>/<%= t.total_seat %></td>
+            <td><%= t.contact_info %></td>
+            <td><%= link_to 'Show', t %></td>
+            <td><%= link_to 'Edit', edit_tour_path(t) %></td>
+            <td><%= link_to 'Destroy', t, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+      <% end %>
+    <% end %>
+
+    </tbody>
+
+  </table>
+
+  <h3><%= link_to 'Create a new tour', new_tour_path, method: :get %></h3>
+
+<!--  <h1>Booking List of All Tours</h1>-->
+  <% if(current_user.role.match(/admin/i)) %>
+    <h1>Booking List of All Tours</h1>
+  <%else %>
+    <h1>Booking List of My Tours</h1>
+  <%end%>
+
+  <table class="table">
+
+    <thead>
+    <tr>
+      <th>List By</th>
       <th>Tour Name</th>
       <th># of Booked Seats</th>
       <th>Booked By</th>
@@ -27,6 +84,7 @@
 
             <td><%= b.user.name %></td>
             <td><%= b.updated_at %></td>
+            <td><%= link_to 'Show', t %></td>
           </tr>
         <% end %>
       <% end %>
@@ -37,12 +95,18 @@
   </table>
 
 
-  <h1>Bookmark List of My Tour</h1>
+  <% if(current_user.role.match(/admin/i)) %>
+    <h1>Bookmark List of All Tours</h1>
+  <%else %>
+    <h1>Bookmark List of My Tours</h1>
+  <%end%>
+
+
   <table class="table">
 
     <thead>
     <tr>
-      <th>Tour List By</th>
+      <th>List By</th>
       <th>Tour Name</th>
       <th>Bookmarked By</th>
       <th>Last Update Time</th>
@@ -61,6 +125,7 @@
 
             <td><%= bm.user.name %></td>
             <td><%= bm.updated_at %></td>
+            <td><%= link_to 'Show', t %></td>
           </tr>
         <% end %>
       <% end %>
@@ -70,5 +135,5 @@
 
   </table>
 
-  <p><%= link_to 'Back', root_path %></p>
+  <p><%= link_to 'Back to Home', root_path %></p>
 </div>
