--- a/project2_1/app/views/tours/show.html.erb
+++ b/project2_1/app/views/tours/show.html.erb
@@ -1,9 +1,22 @@
 <div class="container">
 
   <p><%= link_to 'Edit Tour', edit_tour_path(@tour) %> |
-    <%= link_to 'Back to tour list', tours_path %></p>
+    <%= link_to 'Back to All Tour List', tours_path %>
+    <%if(current_user.role.match(/agent|admin/i)) %>
+    |<%= link_to 'Back to Agent Center', home_agenttourlist_path %>
+      <%end%>
+    <%if(current_user.role.match(/customer|admin/i)) %>
+      |<%= link_to 'Back to Customer Center', home_customercenter_path %>
+    <%end%>
+  </p>
+
 
   <p id="notice"><%= notice %></p>
+
+  <p>
+    <strong>Tour ID:</strong>
+    <%= @tour.id %>
+  </p>
 
   <p>
     <strong>Name:</strong>
