--- a/project2_1/app/views/home/agenttourlist.html.erb
+++ b/project2_1/app/views/home/agenttourlist.html.erb
@@ -50,7 +50,7 @@
 
   </table>
 
-  <h3><%= link_to 'Create a new tour', new_tour_path, method: :get %></h3>
+  <h3><strong><%= link_to 'Create a new tour', new_tour_path, method: :get %></strong></h3>
 
 <!--  <h1>Booking List of All Tours</h1>-->
   <% if(current_user.role.match(/admin/i)) %>
