--- a/project2_1/app/views/tours/new.html.erb
+++ b/project2_1/app/views/tours/new.html.erb
@@ -1,7 +1,7 @@
 
 <div class="container">
   <h1>New Tour</h1>
-<p><%= render 'form', tour: @tour %></p>
+<p><%= render 'formNew', tour: @tour %></p>
 
 
 <p><%= link_to 'Back', tours_path %></p>
