--- a/project2_1/app/views/tours/index.html.erb
+++ b/project2_1/app/views/tours/index.html.erb
@@ -1,13 +1,12 @@
 <div class="container">
 
-<p id="notice"><%= notice %></p>
+  <p id="notice"><%= notice %></p>
 
 
-
-<h1>Tours</h1>
-<p>
+  <h1>Tours</h1>
+  <p>
   <table class="table">
-  <thead>
+    <thead>
     <tr>
       <th>Name</th>
       <th>Description</th>
@@ -18,16 +17,17 @@
       <th>Start_location</th>
       <th>Seats(avl/total)</th>
       <th>Contact</th>
+      <th>Status</th>
       <th colspan="3"></th>
     </tr>
-  </thead>
+    </thead>
 
-  <tbody>
+    <tbody>
 
-  <%= form_tag tours_path, :method => 'get' do %>
-    <%= text_field_tag :search, params[:search], placeholder: "Search By Tour Name" %>
-    <%= submit_tag "Search", :name => nil %>
-  <% end %>
+    <%= form_tag tours_path, :method => 'get' do %>
+      <%= text_field_tag :search, params[:search], placeholder: "Search By Tour Name" %>
+      <%= submit_tag "Search", :name => nil %>
+    <% end %>
 
 
     <% @tours.each do |tour| %>
@@ -41,22 +41,26 @@
         <td><%= tour.start_location %></td>
         <td><%= tour.aval_seat %>/<%= tour.total_seat %></td>
         <td><%= tour.contact_info %></td>
+        <td><%= tour.status %></td>
         <td><%= link_to 'Show', tour %></td>
-        <%if (current_user) && ( current_user.role.match(/admin|agent/i) )  %>
-        <td><%= link_to 'Edit', edit_tour_path(tour) %></td>
-        <td><%= link_to 'Destroy', tour, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% if (current_user) && (current_user.role.match(/admin|agent/i)) %>
+
+          <% if !((tour.status == 'completed') && (current_user.role.match(/agent/i))) %>
+            <td><%= link_to 'Edit', edit_tour_path(tour) %></td>
+          <% end %>
+          <td><%= link_to 'Destroy', tour, method: :delete, data: {confirm: 'Are you sure?'} %></td>
         <% end %>
       </tr>
     <% end %>
-  </tbody>
-</table>
+    </tbody>
+  </table>
 
-</p>
+  </p>
 
-<br>
+  <br>
   <% if user_signed_in? %>
-      <p><%= link_to 'Create a new tour', new_tour_path %></p>
-    <% end %>
+    <p><%= link_to 'Create a new tour', new_tour_path %></p>
+  <% end %>
 <%#= link_to 'Back to Welcome Page', root_path %>
 <%#= link_to 'Dash Board', tours_dashboard_path %>
 </div>
