--- a/project2_1/app/views/tours/show.html.erb
+++ b/project2_1/app/views/tours/show.html.erb
@@ -1,9 +1,15 @@
 <div class="container">
 
-  <p><%= link_to 'Edit Tour', edit_tour_path(@tour) %> |
-    <%= link_to 'Back to tour list', tours_path %></p>
-
   <p id="notice"><%= notice %></p>
+
+  <% if (current_user) && (current_user.role.match(/admin|agent/i)) %>
+
+    <% if !((@tour.status == 'completed') && (current_user.role.match(/agent/i)))%>
+        <p><%= link_to 'Edit Tour', edit_tour_path(@tour) %></p>
+      <%end %>
+
+  <% end %>
+  <p><%= link_to 'Back to tour list', tours_path %></p>
 
   <p>
     <strong>Name:</strong>
@@ -51,6 +57,11 @@
     <%= @tour.contact_info %>
   </p>
 
+  <p>
+    <strong>Status:</strong>
+    <%= @tour.status %>
+  </p>
+
   <!--<p>-->
   <!--  <strong>Available Seats:</strong>-->
   <%#= @tour.description %>
@@ -63,7 +74,7 @@
 
   <% if !@flag %>
 
-    <p><%=render 'bookmarks/form' %></p>
+    <p><%= render 'bookmarks/form' %></p>
 
   <% end %>
 
@@ -78,8 +89,10 @@
 
   <% end %>
 
+  <% if (@tour.status == 'future') %>
+    <p><%= render 'books/form' %></p>
+  <% end %>
 
-  <p><%= render 'books/form' %></p>
   <p><%= render 'books/book' %></p>
 
   <p><%= render 'waitlists/waitlist' %></p>
