--- a/project2_1/app/views/home/index.html.erb
+++ b/project2_1/app/views/home/index.html.erb
@@ -2,10 +2,22 @@
 <p id="notice"><%= notice %></p>
 
 
-  <h1>Welcome</h1>
+  <h1>Welcome!</h1>
 
-  <p>admin account : god@admin.com</p>
-  <p>password: password</p>
+<!--  <br>-->
+
+<!--  <p>admin account : god@admin.com</p>-->
+<!--  <p>password: password</p>-->
+
+<!--  <br>-->
+
+<!--  <p>agent account : agent@gmail.com</p>-->
+<!--  <p>password: password</p>-->
+
+<!--  <br>-->
+
+<!--  <p>customer account : customer@gmail.com</p>-->
+<!--  <p>password: password</p>-->
 
 
 <!--  <p><%#= link_to 'check the tour', tours_path %></p>-->
