--- a/project2_1/app/views/tours/show.html.erb
+++ b/project2_1/app/views/tours/show.html.erb
@@ -19,8 +19,13 @@
   </p>
 
   <p>
-    <strong>Name:</strong>
+    <strong>Tour Name:</strong>
     <%= @tour.name %>
+  </p>
+
+  <p>
+    <strong>List By:</strong>
+    <%= @tour.user.name %>
   </p>
 
   <p>
@@ -40,16 +45,6 @@
   </p>
 
   <p>
-    <strong>Price:</strong>
-    <%= @tour.price %>
-  </p>
-
-  <p>
-    <strong>Booking Deadline:</strong>
-    <%= @tour.booking_deadline %>
-  </p>
-
-  <p>
     <strong>Duration:</strong>
     <%= @tour.start_date %>~<%= @tour.end_date %>
   </p>
@@ -60,14 +55,29 @@
   </p>
 
 
+<!--  <p>-->
+<!--  <strong>Itinerary:</strong>-->
+  <%#= render 'locations/location' %>
+<!--  </p>-->
+  <%#if (current_user == @tour.user) | ( current_user.role.match(/admin/i) )  %>
+<!--  <strong>Extend Itinerary:</strong>-->
+  <%#= render 'locations/form'%>
+  <%#end%>
+
   <p>
-  <strong>Itinerary:</strong>
-  <%= render 'locations/location' %>
+    <strong>Check Photos:</strong>
+    <%= link_to 'link to photos ', tour_photos_path(@tour) %>
   </p>
-  <%if (current_user) && ( current_user.role.match(/admin|agent/i) )  %>
-  <strong>Extend Itinerary:</strong>
-  <%= render 'locations/form'%>
-  <%end%>
+
+  <p>
+    <strong>Price:</strong>
+    <%= @tour.price %>
+  </p>
+
+  <p>
+    <strong>Booking Deadline:</strong>
+    <%= @tour.booking_deadline %>
+  </p>
 
   <p>
     <strong>Contact:</strong>
@@ -79,10 +89,6 @@
   <%#= @tour.description %>
   <!--</p>-->
 
-  <p>
-    <strong>Check Photos:</strong>
-    <%= link_to 'link to photos ', tour_photos_path(@tour) %>
-  </p>
 
   <% if !@flag %>
 
